--- a/style.css
+++ b/style.css
@@ -154,9 +154,9 @@ section {
 
 #profile {
     display: flex;
-    height: 400px;
-    width: 400px;
-    margin: auto 0;
+    justify-content: center;
+    gap: 5rem;
+    height: 80vh;
 }
 
 .section__pic-container {
